feat: add mockito project
Swap existing project with mockito project from archive.
See branch 'b4-mockito' for past project.