@@ -2,8 +2,6 @@ package drinkshop.service;
 
 import drinkshop.domain.*;
 import drinkshop.repository.Repository;
-import drinkshop.service.validator.ProductValidator;
-import drinkshop.service.validator.Validator;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -11,26 +9,18 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final Repository<Integer, Product> productRepo;
-    private Validator<Product> validator;
+
     public ProductService(Repository<Integer, Product> productRepo) {
         this.productRepo = productRepo;
-        this.validator = new ProductValidator();
     }
 
     public void addProduct(Product p) {
-        if (validator != null) {
-            validator.validate(p);
-        }
         productRepo.save(p);
     }
 
     public void updateProduct(int id, String name, double price, CategorieBautura categorie, TipBautura tip) {
         Product updated = new Product(id, name, price, categorie, tip);
         productRepo.update(updated);
-    }
-
-    public void setValidator(Validator<Product> validator) {
-        this.validator = validator;
     }
 
     public void deleteProduct(int id) {
@@ -56,13 +46,13 @@ public class ProductService {
         if (categorie == CategorieBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie() == categorie)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<Product> filterByTip(TipBautura tip) {
         if (tip == TipBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getTip() == tip)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
